# bdar

./: .envrc  .gitignore  .sql-formatter.json  README.md  plan.md
nushell_implementation/lib/sql/: copy_checksums.sql  count_files.sql  init.sql  set_checksum.sql  sum_file_size.sql
rust_implementation/: Cargo.toml  scratch.md
rust_implementation/src/: context.rs  db.rs  error.rs  file_entry.rs  ingest.rs  main.rs  snapshot.rs  status.rs  timestamp.rs  utils.rs
rust_implementation/src/ingest/: checksum.rs  index.rs  walk_tree.rs
rust_implementation/src/sql/: cleanup_files.sql  copy_checksums.sql  count_tables.sql  create_ingest_run.sql  create_snapshot.sql  delete_file.sql  delete_no_ops.sql  finish_ingest_run.sql  get_last_ingest_run.sql  get_missing_checksums.sql  get_previous_snapshot.sql  get_repo_totals.sql  init.sql  insert_file.sql  list_files_missing_checksums.sql  report_deleted_files.sql  report_disks_not_burned.sql  report_missing_checksums.sql  report_moved_files.sql  report_new_files.sql  report_repo_totals.sql  set_checksum.sql  snapshot_deleted_files.sql  snapshot_new_files.sql  sql_scratch.md  update_file_meta.sql
rust_implementation/src/status/: disks.rs  files.rs  ingest_run.rs  snapshot.rs
src/lib/sql/: create_ingest_run.sql  delete_no_ops.sql  get_previous_snapshot.sql  ingest_files.sql  init_files.sql  init_snapshots.sql  test.sql
