[package]
name = "bdar"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
glob-match = "0.2.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
walkdir = "2.5.0"
