[package]
name = "bdar"
version = "0.1.0"
edition = "2021"
authors = ["Robert Buchberger <robert@buchberger.cc"]
description = "Bare Disk Archiver"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "from", "error"] }
glob-match = "0.2.1"
humansize = "2.1.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
timeago = "0.4.2"
walkdir = "2.5.0"
